[metadata]
name = birdsong
url = https://github.com/Perceptua/birdsong
author = Aphorikles
author_email = perceptua.blue@gmail.com
description = Analytics on Twitter data
long_description = file: README.rst, RELEASES.rst, LICENSE.rst
license = MIT
keywords = Twitter, API, analytics, analysis, visualization

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
    
[options.packages.find]
exclude =
    build*
    docs*
    htmlcov*
    indexia.egg-info*
    tests*